<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".StartingActivity"
                android:background="#ffb000ff">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/openingTitle"
        android:text="@string/opening_title"
        android:textSize="34sp"
        android:textColor="#ff0098f6"
        android:gravity="center_horizontal"
        android:clickable="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/openingTitle"
        android:paddingTop="20dp"
        android:id="@+id/openingMessage"
        android:text="@string/opening_message"
        android:textSize="24sp"
        android:textColor="#fffcfaff"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/openingMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:id="@+id/nameHolder"
        android:textSize="22sp"
        android:textColor="#fff8f7f9"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:imeOptions="actionDone"
        android:focusable="true"
        android:background="#0099ee"
        android:textColorHint="#fff8f7f9"
        android:maxLength="25"
        android:maxLines="1"
        android:singleLine="true"
        android:enabled="true"
        android:textIsSelectable="false"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameHolder"
        android:layout_marginTop="22dp"
        android:id="@+id/ageHolder"
        android:background="#0099ee"
        android:hint="@string/age_hint"
        android:textSize="22sp"
        android:textColor="#fff9f5f9"
        android:textColorHint="#fff8f7f9"
        android:textIsSelectable="false"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:focusable="true"
        android:enabled="true"
        android:lines="1"
        android:maxLength="2"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/genderSelector"
        android:layout_below="@+id/ageHolder"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"
        android:dropDownSelector="@android:color/background_light"
        android:background="#0099ee"
        android:entries="@array/gender_selector_choices"
        android:clickable="true"
        android:spinnerMode="dropdown"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/genderSelector"
        android:id="@+id/startButton"
        android:text="@string/start_button"
        android:textSize="22sp"
        android:layout_marginTop="18dp"
        android:textColor="#ffb000ff"
        android:clickable="true"
        android:background="#fff4f9f2"/>


</RelativeLayout>
