<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                style="?activity_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="davidhope.whatsmyageagain.Controller.AgeCalculatorActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/usersName"
        android:paddingBottom="20dp"
        android:ems="10"
        android:textSize="24sp"
        style="?text"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ageCalculatorOpeningTitle"
        android:paddingTop="10dp"
        android:text="@string/age_calculator_activity_title"
        android:textSize="24sp"
        android:layout_below="@+id/usersName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        style="?text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ageCalculatorOpeningTitle"
        android:layout_toLeftOf="@+id/ageInWeeksLabel"
        android:layout_toStartOf="@+id/ageInWeeksLabel"
        android:id="@+id/age_in_days"
        android:textSize="22sp"   
        android:paddingTop="5dp"
        android:paddingRight="20dp"
        android:layout_marginTop="80dp"
        style="?text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/days_label"
        android:text="@string/age_in_days_label"
        android:textSize="24sp"
        android:layout_above="@+id/age_in_weeks"
        android:layout_alignRight="@+id/ageCalculatorOpeningTitle"
        android:layout_alignEnd="@+id/ageCalculatorOpeningTitle"
        android:layout_marginRight="118dp"
        android:layout_marginEnd="118dp"
        style="?text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/age_in_weeks"
        android:text="1040"
        android:textSize="24sp"
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:layout_below="@+id/age_in_days"
        android:layout_alignRight="@+id/age_in_days"
        android:layout_alignEnd="@+id/age_in_days"
        style="?text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ageInWeeksLabel"
        android:text="@string/age_in_weeks_label"
        android:textSize="24sp"
        android:layout_alignBottom="@+id/age_in_weeks"
        android:layout_alignRight="@+id/days_label"
        android:layout_alignEnd="@+id/days_label"
        style="?text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ageOfUserInDogYears"
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:text="140"
        android:textSize="24sp"
        android:layout_alignTop="@+id/dogYearsLabel"
        android:layout_alignLeft="@+id/age_in_weeks"
        android:layout_alignStart="@+id/age_in_weeks"
        style="?text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dogYearsLabel"
        android:paddingTop="10dp"
        android:text="@string/age_in_dog_years_label"
        android:textSize="24sp"
        android:layout_below="@+id/ageInWeeksLabel"
        android:layout_alignLeft="@+id/ageInWeeksLabel"
        android:layout_alignStart="@+id/ageInWeeksLabel"
        style="?text" />

    <Button
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:id="@+id/startThirdActivityButton"
        android:text="@string/start_third_activity_button"
        android:textSize="22sp"
        android:layout_below="@+id/ageOfUserInDogYears"
        android:layout_alignLeft="@+id/ageCalculatorOpeningTitle"
        android:layout_alignStart="@+id/ageCalculatorOpeningTitle"
        style="?button_color"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/backToHomeButton"
        android:text="@string/button_back_to_main_activity"
        android:textSize="22sp"
        android:layout_marginTop="51dp"
        android:layout_below="@+id/startThirdActivityButton"
        android:layout_alignLeft="@+id/ageCalculatorOpeningTitle"
        android:layout_alignStart="@+id/ageCalculatorOpeningTitle"
        style="?button_color" />

</RelativeLayout>
